WIP: add/remove custodian users from snapshot steward policy